# magnetic-percolation-simulation

./: CMakeLists.txt  README.md  graphics.cpp  graphics.h  grid.cpp  grid.h  sim.cpp  vis.cpp  vis_test.cpp
